--- a/Group11-Midstone-2021.vcxproj
+++ b/Group11-Midstone-2021.vcxproj
@@ -147,6 +147,7 @@
     <ClCompile Include="Data.cpp" />
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="GameObject.cpp" />
+    <ClCompile Include="ImageTexture.cpp" />
     <ClCompile Include="ItemPool.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Map.cpp" />
@@ -165,6 +166,7 @@
     <ClInclude Include="Data.h" />
     <ClInclude Include="GameManager.h" />
     <ClInclude Include="GameObject.h" />
+    <ClInclude Include="ImageTexture.h" />
     <ClInclude Include="ItemPool.h" />
     <ClInclude Include="Map.h" />
     <ClInclude Include="Matrix.h" />
