--- a/Group11-Midstone-2021.vcxproj
+++ b/Group11-Midstone-2021.vcxproj
@@ -145,6 +145,7 @@
   <ItemGroup>
     <ClCompile Include="Body.cpp" />
     <ClCompile Include="Data.cpp" />
+    <ClCompile Include="Door.cpp" />
     <ClCompile Include="Event.cpp" />
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="GameObject.cpp" />
@@ -165,6 +166,7 @@
   <ItemGroup>
     <ClInclude Include="Body.h" />
     <ClInclude Include="Data.h" />
+    <ClInclude Include="Door.h" />
     <ClInclude Include="Event.h" />
     <ClInclude Include="GameManager.h" />
     <ClInclude Include="GameObject.h" />
