Attempt2 On Audio
Literally Second Attempt on the Audio
IDK if VS can detect my audio output

--- a/Group11-Midstone-2021.vcxproj.filters
+++ b/Group11-Midstone-2021.vcxproj.filters
@@ -84,6 +84,9 @@
     <ClCompile Include="Door.cpp">
       <Filter>Source Files\Database</Filter>
     </ClCompile>
+    <ClCompile Include="Sounds.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Body.h">
@@ -148,6 +151,12 @@
     </ClInclude>
     <ClInclude Include="Door.h">
       <Filter>Header Files\Database</Filter>
+    </ClInclude>
+    <ClInclude Include="SoundDefs.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Sounds.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
