--- a/Group11-Midstone-2021.vcxproj
+++ b/Group11-Midstone-2021.vcxproj
@@ -153,12 +153,14 @@
     <ClCompile Include="ItemPool.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Map.cpp" />
+    <ClCompile Include="Menu.cpp" />
     <ClCompile Include="MMath.cpp" />
     <ClCompile Include="Monster.cpp" />
     <ClCompile Include="Physics.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Room.cpp" />
     <ClCompile Include="Scene0.cpp" />
+    <ClCompile Include="Scene1.cpp" />
     <ClCompile Include="Timer.cpp" />
     <ClCompile Include="VMath.cpp" />
     <ClCompile Include="Window.cpp" />
@@ -174,6 +176,7 @@
     <ClInclude Include="ItemPool.h" />
     <ClInclude Include="Map.h" />
     <ClInclude Include="Matrix.h" />
+    <ClInclude Include="Menu.h" />
     <ClInclude Include="MMath.h" />
     <ClInclude Include="Monster.h" />
     <ClInclude Include="Physics.h" />
@@ -181,6 +184,7 @@
     <ClInclude Include="Room.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="Scene0.h" />
+    <ClInclude Include="Scene1.h" />
     <ClInclude Include="Timer.h" />
     <ClInclude Include="Vector.h" />
     <ClInclude Include="VMath.h" />
