Revert "Merge branch 'Testing' of https://github.com/SSwintak/Group11-Midstone-2021 into Testing"
This reverts commit 171ad1beff192cb2f01eb8b6fec226fe09d8f29c, reversing
changes made to a7c74e47c22611c2debb9b0cd54951eb9da9b590.

--- a/Group11-Midstone-2021.vcxproj.filters
+++ b/Group11-Midstone-2021.vcxproj.filters
@@ -84,8 +84,11 @@
     <ClCompile Include="Door.cpp">
       <Filter>Source Files\Database</Filter>
     </ClCompile>
-    <ClCompile Include="ImageScene.cpp">
+    <ClCompile Include="Scene1.cpp">
       <Filter>Source Files\Scenes</Filter>
+    </ClCompile>
+    <ClCompile Include="Menu.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -152,8 +155,11 @@
     <ClInclude Include="Door.h">
       <Filter>Header Files\Database</Filter>
     </ClInclude>
-    <ClInclude Include="ImageScene.h">
+    <ClInclude Include="Scene1.h">
       <Filter>Header Files\Scenes</Filter>
+    </ClInclude>
+    <ClInclude Include="Menu.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
